syntax = "proto3";

package food;

option go_package = "internal/delivery/grpc/pb;pb";
import "google/protobuf/timestamp.proto";

message Food{
    string id = 1;
    string merchant_id = 2;
    string name_foods = 3;
    int64 price = 4;
    string availability = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message FoodListResponse {
    repeated Food foods = 1;
}

message CreateFoodRequest {
    string merchant_id = 1;
    string name_foods = 2;
    int64 price = 3;
    string availability = 4;
}

message UpdateFoodRequest {
    string id = 1;
    string merchant_id = 2;
    string name_foods = 3;
    int64 price = 4;
    string availability = 5;
}

message DeleteFoodRequest {
    string id = 1;
}

message DeleteFoodResponse {
    string message = 1;
}

message FoodResponse {
    Food Food = 1;
}

message GetByIdFoodRequest {
    string id = 1;
}

message Empty {}

service FoodService {
  rpc CreateFood(CreateFoodRequest) returns (FoodResponse);
  rpc GetAllFood(Empty) returns (FoodListResponse); // âœ… Fixed!
  rpc GetByIdFood(GetByIdFoodRequest) returns (FoodResponse);
  rpc UpdateFood(UpdateFoodRequest) returns (FoodResponse);
  rpc DeleteFood(DeleteFoodRequest) returns (DeleteFoodResponse);
}
